# aimp-openmpt

./: Aimp.toml  Cargo.toml  openmpt.lib
.github/workflows/: ci.yml  release.yml
src/: lib.rs
